# meteoroid

./: Cargo.toml  Dockerfile  Readme.md  deny.toml
.github/workflows/: main.yml
.local/: docker.sh
meteoroid/: Cargo.toml
meteoroid-lib/: Cargo.toml
meteoroid-lib/src/: analyze.rs  cargo.rs  cmd.rs  crates.rs  error.rs  fs.rs  git.rs  lib.rs  local_crates.rs  sync.rs
meteoroid-lib/src/analyze/: report.rs  similarity.rs
meteoroid-lib/src/analyze/report/: html.rs
meteoroid-lib/src/crates/: api.rs  crate_consumer.rs  csv_parse.rs
meteoroid-lib/src/crates/crate_consumer/: default.rs
meteoroid/src/: main.rs
