[workspace]
members = ["meteoroid","meteoroid-lib"]
resolver = "3"


[workspace.dependencies]
meteoroid-lib = { path = "./meteoroid-lib" }

anyhow = "1.0.100"
cargo_toml = "0.22.3"
clap = { version = "4.5.49", features = ["derive", "env"] }
csv = "1.3.1"
dashmap = "6.1.0"
flate2 = "1.1.4"
futures = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "stream"] }
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strsim = "0.11.1"
tar = "0.4.44"
tempfile = "3.23.0"
tokio = { version = "1.47.1", default-features = false, features = ["rt-multi-thread", "macros", "fs", "process", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"

[workspace.lints.clippy]
pedantic = { priority = -1, level = "warn" }
missing_errors_doc = "allow"
struct_field_names = "allow"
similar_names = "allow"
len_without_is_empty = "allow"
implicit_hasher = "allow"
new_without_default = "allow"
