[package]
name = "meteoroid-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
cargo_toml = { workspace = true }
csv = { workspace = true }
dashmap = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[lints]
workspace = true