[package]
name = "meteoroid-lib"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
cargo_toml = { workspace = true }
csv = { workspace = true }
dashmap = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[lints]
workspace = true